<resources>
    <string name="app_name">Toolbars</string>
    <string name="action_settings">Settings</string>
    <string name="expandable_toolbar">Expandable toolbar</string>
    <string name="parallax_toolbar">Parallax toolbar</string>
    <string name="hide_toolbar">Hide toolbar</string>
    <string name="snackbar_message">Here\'s a Snackbar</string>
    <string name="toolbar_with_tablayout">Toolbar with TabLayout</string>
    <string name="notifications">Notifications</string>
    <string name="endless_notification">Endless</string>
    <string name="simple_notification">Simple</string>
    <string name="rich_notification">Rich</string>
    <string name="big_text_notification">Big text</string>
    <string name="big_picture_notification">Big picture</string>
    <string name="inbox_notification">Inbox</string>
    <string name="messaging_notification">Messaging</string>
    <string name="indeterminate_notification">Indeterminate</string>
    <string name="notification_title">Awesome notification\'s title!</string>
    <string name="notification_content">Cool content</string>
    <string name="long_string">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="determinate_notification">determinate</string>
</resources>
