<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/simple_notification"
            style="@style/ButtonStyle"
            android:text="@string/simple_notification"/>

        <Button
            android:id="@+id/big_text_notification"
            style="@style/ButtonStyle"
            android:text="@string/big_text_notification"/>

        <Button
            android:id="@+id/big_picture_notification"
            style="@style/ButtonStyle"
            android:text="@string/big_picture_notification"/>

        <Button
            android:id="@+id/inbox_notification"
            style="@style/ButtonStyle"
            android:text="@string/inbox_notification"/>

        <Button
            android:id="@+id/messaging_notification"
            style="@style/ButtonStyle"
            android:text="@string/messaging_notification"/>

        <Button
            android:id="@+id/media_notification"
            style="@style/ButtonStyle"
            android:text="@string/media_notification"/>

    </LinearLayout>

</LinearLayout>